--- a/Biodata/cv.html
+++ b/Biodata/cv.html
@@ -62,7 +62,7 @@
                 </table>
             </div>
             <div class="right">
-                <img src="foto.jpg" class="photo" />
+                <img src="https://i.ibb.co.com/F4xdN4F2/MVB09172.jpg" class="photo" />
             </div>
         </div>
 
@@ -131,5 +131,6 @@
     </div>
     </table>
 </body>
+
 
 </html>
