--- a/tugasIDU/7.iframe.html
+++ b/tugasIDU/7.iframe.html
@@ -17,11 +17,12 @@
         <!-- untuk menampilkan halaman web lain di dalam halaman ini. -->
     </p>
 
-    <iframe src="https://ofsyid.github.io/skom/" width="700"
+    <iframe src="https://ofsyid.github.io/skom" width="700"
         height="400" title="Tampilan Wikipedia" frameborder="1" scrolling="auto" allowfullscreen
         style="border: 3px solid #333; border-radius: 10px;">
     </iframe>
 
 </body>
+
 
 </html>
