--- a/tugasIDU/6.header.html
+++ b/tugasIDU/6.header.html
@@ -4,27 +4,252 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-     <header>INI HALAMAN BAGIAN ATAS</header>
 
-  <main>
+<style>
+/* =================== RESET =================== */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    background: #f0f0f0;
+    transition: 0.3s;
+}
+
+/* =================== HEADER =================== */
+header {
+    background: #3f51b5;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
+    position: relative;
+}
+
+/* Tombol Dark Mode */
+#darkBtn {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px 15px;
+    background: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+/* =================== LAYOUT =================== */
+main {
+    display: flex;
+    height: calc(100vh - 70px);
+}
+
+/* SIDEBAR */
+nav {
+    width: 250px;
+    background: #ffffff;
+    padding: 20px;
+    border-right: 1px solid #ccc;
+    transition: 0.3s;
+}
+
+nav h3 {
+    margin-bottom: 10px;
+}
+
+nav ul {
+    list-style: none;
+    margin-top: 5px;
+}
+
+nav ul li {
+    margin-bottom: 10px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+}
+
+nav a:hover {
+    color: #3f51b5;
+}
+
+/* IFRAME */
+iframe {
+    flex: 1;
+    border: none;
+    background: white;
+    transition: 0.3s;
+}
+
+/* =================== RESPONSIVE =================== */
+@media (max-width: 768px) {
+    main {
+        flex-direction: column;
+    }
+
+    nav {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #ccc;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    nav ul {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+        margin-top: 10px;
+    }
+
+    nav ul li {
+        margin: 0;
+    }
+
+    iframe {
+        height: calc(100vh - 160px);
+    }
+}
+
+@media (max-width: 480px) {
+    nav a {
+        font-size: 14px;
+    }
+
+    header {
+        font-size: 18px;
+    }
+}
+
+/* =================== DARK MODE =================== */
+body.dark {
+    background: #1e1e1e;
+    color: white;
+}
+
+body.dark header {
+    background: #222;
+}
+
+body.dark nav {
+    background: #2a2a2a;
+    border-right: 1px solid #444;
+}
+
+body.dark nav a {
+    color: #ddd;
+}
+
+body.dark nav a:hover {
+    color: #90a4ff;
+}
+
+body.dark #darkBtn {
+    background: #444;
+    color: white;
+}
+</style>
+
+<script>
+/* ===========================================
+   Fungsi untuk menampilkan konten di iframe
+   =========================================== */
+function tampilkan(halaman) {
+    const isDark = document.body.classList.contains("dark");
+
+    document.getElementById("frameIsi").srcdoc = `
+        <style>
+            body {
+                background: ${isDark ? "#2a2a2a" : "white"};
+                color: ${isDark ? "white" : "black"};
+                font-family: Arial;
+                padding: 20px;
+            }
+            h2 {
+                text-align: center;
+                color: ${isDark ? "white" : "black"};
+            }
+            p {
+                text-align: center;
+            }
+        </style>
+
+        <h2>${halaman}</h2>
+        <p>Ini adalah konten dari menu <b>${halaman}</b>.</p>
+    `;
+}
+
+/* ===========================================
+   Fungsi untuk load halaman default
+   =========================================== */
+function loadDefault() {
+    const isDark = document.body.classList.contains("dark");
+
+    document.getElementById("frameIsi").srcdoc = `
+        <style>
+            body {
+                background: ${isDark ? "#2a2a2a" : "white"};
+                color: ${isDark ? "white" : "black"};
+                font-family: Arial;
+                padding: 20px;
+            }
+            h2 {
+                text-align: center;
+                color: ${isDark ? "white" : "black"};
+            }
+            p {
+                text-align: center;
+            }
+        </style>
+
+        <h2>Selamat Datang</h2>
+        <p>Silakan pilih menu di sebelah kiri untuk melihat konten.</p>
+    `;
+}
+
+/* ===========================================
+   Dark Mode Toggle
+   =========================================== */
+function toggleDarkMode() {
+    document.body.classList.toggle("dark");
+    document.getElementById("darkBtn").innerText =
+        document.body.classList.contains("dark") ? "Light Mode" : "Dark Mode";
+
+    loadDefault(); // refresh iframe ikut tema
+}
+</script>
+
+</head>
+<body onload="loadDefault()">
+
+<header>
+    INI HALAMAN BAGIAN ATAS
+    <button id="darkBtn" onclick="toggleDarkMode()">Dark Mode</button>
+</header>
+
+<main>
     <nav>
       <h3>Menu</h3>
       <ul>
-        <li><a href="#pendahuluan" onclick="tampilkan('pendahuluan')">Pendahuluan</a></li>
-        <li><a href="#pembahasan" onclick="tampilkan('pembahasan')">Pembahasan</a></li>
-        <li><a href="#kesimpulan" onclick="tampilkan('kesimpulan')">Kesimpulan</a></li>
+        <li><a href="#" onclick="tampilkan('Pendahuluan')">Pendahuluan</a></li>
+        <li><a href="#" onclick="tampilkan('Pembahasan')">Pembahasan</a></li>
+        <li><a href="#" onclick="tampilkan('Kesimpulan')">Kesimpulan</a></li>
       </ul>
-      <hr>
-      <a href="#" onclick="tampilkan('beranda')">Kembali ke Halaman Awal</a>
+      <hr style="margin: 15px 0;">
+      <a href="#" onclick="loadDefault()">Kembali ke Halaman Awal</a>
     </nav>
 
-    <iframe id="frameIsi" srcdoc="
-      <h2 style='text-align:center;'>Selamat Datang</h2>
-      <p style='text-align:center;'>Silakan pilih menu di sebelah kiri untuk melihat konten.</p>
-    "></iframe>
-  </main>
+    <iframe id="frameIsi"></iframe>
+</main>
+
 </body>
 </html>
