--- a/tugasIDU/6.header.html
+++ b/tugasIDU/6.header.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Menu</title>
 
 <style>
-/* =================== RESET =================== */
+
 * {
     margin: 0;
     padding: 0;
@@ -16,12 +16,11 @@
 
 body {
     background: #f0f0f0;
-    transition: 0.3s;
 }
 
-/* =================== HEADER =================== */
+
 header {
-    background: #3f51b5;
+    background: maroon;
     color: white;
     padding: 15px;
     text-align: center;
@@ -29,26 +28,28 @@ header {
     position: relative;
 }
 
-/* Tombol Dark Mode */
-#darkBtn {
+
+#menuBtn {
+    display: none;
     position: absolute;
-    right: 20px;
+    left: 20px;
     top: 10px;
-    padding: 8px 15px;
-    background: white;
-    border: none;
+    padding: 8px 12px;
+    font-size: 22px;
+    background: transparent;
     border-radius: 8px;
+    border: none;
     cursor: pointer;
-    font-weight: bold;
+    color: white;
 }
 
-/* =================== LAYOUT =================== */
+
 main {
     display: flex;
     height: calc(100vh - 70px);
 }
 
-/* SIDEBAR */
+
 nav {
     width: 250px;
     background: #ffffff;
@@ -63,7 +64,6 @@ nav h3 {
 
 nav ul {
     list-style: none;
-    margin-top: 5px;
 }
 
 nav ul li {
@@ -85,11 +85,15 @@ iframe {
     flex: 1;
     border: none;
     background: white;
-    transition: 0.3s;
 }
 
-/* =================== RESPONSIVE =================== */
+
 @media (max-width: 768px) {
+
+    #menuBtn {
+        display: block;
+    }
+
     main {
         flex-direction: column;
     }
@@ -98,89 +102,38 @@ iframe {
         width: 100%;
         border-right: none;
         border-bottom: 1px solid #ccc;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
+
+    
+        max-height: 0;
+        overflow: hidden;
+        padding: 0 20px;
     }
 
-    nav ul {
-        display: flex;
-        width: 100%;
-        justify-content: space-around;
-        margin-top: 10px;
-    }
-
-    nav ul li {
-        margin: 0;
+    nav.show {
+        padding: 20px;
+        max-height: 500px;
     }
 
     iframe {
         height: calc(100vh - 160px);
     }
 }
-
-@media (max-width: 480px) {
-    nav a {
-        font-size: 14px;
-    }
-
-    header {
-        font-size: 18px;
-    }
-}
-
-/* =================== DARK MODE =================== */
-body.dark {
-    background: #1e1e1e;
-    color: white;
-}
-
-body.dark header {
-    background: #222;
-}
-
-body.dark nav {
-    background: #2a2a2a;
-    border-right: 1px solid #444;
-}
-
-body.dark nav a {
-    color: #ddd;
-}
-
-body.dark nav a:hover {
-    color: #90a4ff;
-}
-
-body.dark #darkBtn {
-    background: #444;
-    color: white;
-}
 </style>
 
 <script>
-/* ===========================================
-   Fungsi untuk menampilkan konten di iframe
-   =========================================== */
+
 function tampilkan(halaman) {
-    const isDark = document.body.classList.contains("dark");
 
     document.getElementById("frameIsi").srcdoc = `
         <style>
             body {
-                background: ${isDark ? "#2a2a2a" : "white"};
-                color: ${isDark ? "white" : "black"};
-                font-family: Arial;
+                background: white;
+                color: black;
                 padding: 20px;
+                font-family: Arial;
             }
-            h2 {
-                text-align: center;
-                color: ${isDark ? "white" : "black"};
-            }
-            p {
-                text-align: center;
-            }
+            h2 { text-align:center; }
+            p { text-align:center; }
         </style>
 
         <h2>${halaman}</h2>
@@ -188,43 +141,29 @@ function tampilkan(halaman) {
     `;
 }
 
-/* ===========================================
-   Fungsi untuk load halaman default
-   =========================================== */
+
 function loadDefault() {
-    const isDark = document.body.classList.contains("dark");
 
     document.getElementById("frameIsi").srcdoc = `
         <style>
             body {
-                background: ${isDark ? "#2a2a2a" : "white"};
-                color: ${isDark ? "white" : "black"};
-                font-family: Arial;
+                background: white;
+                color: black;
                 padding: 20px;
+                font-family: Arial;
             }
-            h2 {
-                text-align: center;
-                color: ${isDark ? "white" : "black"};
-            }
-            p {
-                text-align: center;
-            }
+            h2 { text-align:center; }
+            p { text-align:center; }
         </style>
 
         <h2>Selamat Datang</h2>
-        <p>Silakan pilih menu di sebelah kiri untuk melihat konten.</p>
+        <p>Silakan pilih menu untuk melihat konten.</p>
     `;
 }
 
-/* ===========================================
-   Dark Mode Toggle
-   =========================================== */
-function toggleDarkMode() {
-    document.body.classList.toggle("dark");
-    document.getElementById("darkBtn").innerText =
-        document.body.classList.contains("dark") ? "Light Mode" : "Dark Mode";
 
-    loadDefault(); // refresh iframe ikut tema
+function toggleMenu() {
+    document.querySelector("nav").classList.toggle("show");
 }
 </script>
 
@@ -232,11 +171,12 @@ function toggleDarkMode() {
 <body onload="loadDefault()">
 
 <header>
+    <button id="menuBtn" onclick="toggleMenu()">⋮</button>
     INI HALAMAN BAGIAN ATAS
-    <button id="darkBtn" onclick="toggleDarkMode()">Dark Mode</button>
 </header>
 
 <main>
+
     <nav>
       <h3>Menu</h3>
       <ul>
@@ -244,11 +184,12 @@ function toggleDarkMode() {
         <li><a href="#" onclick="tampilkan('Pembahasan')">Pembahasan</a></li>
         <li><a href="#" onclick="tampilkan('Kesimpulan')">Kesimpulan</a></li>
       </ul>
-      <hr style="margin: 15px 0;">
+      <hr style="margin:15px 0;">
       <a href="#" onclick="loadDefault()">Kembali ke Halaman Awal</a>
     </nav>
 
     <iframe id="frameIsi"></iframe>
+
 </main>
 
 </body>
